# vkvg

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CONTRIBUTING.md  Doxyfile  FUNDING.yml  Findvkvg.cmake  Gemfile  LICENSE.md  README.md  _config.yml  annotated.html  appveyor.yml  clang_overrides.txt  classes.html  cmake.clang-format  custom.css  default.profraw  dir_d44c64559bbebec7f509842c48db8b23.html  documentation.md  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  group__context.html  group__context_ga003f578ba25479c16cec0f66161ed0f9.html  group__context_ga01525d0d537d2e03d541ad57325f14d2.html  group__context_ga07b38d9e2fa6338d765b3ba6f4414a87.html  group__context_ga0a1ff002bf87d056d6749966fdabd3a6.html  group__context_ga0b8f1aabb13f0a25b195fc28153eb821.html  group__context_ga0bb6ecd1c3f10f1a6bae09a808986a7c.html  (+380 more)
.github/workflows/: cmake.yml
.sass-cache/873bb8b7409f49ad37bc16c4d09002f085fb5ad2/: no-style-please.scssc
_data/doc/xml/: dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  index.yaml  structvkvg__color__t.xml  structvkvg__font__extents__t.xml  structvkvg__matrix__t.xml  structvkvg__text__extents__t.xml  vkvg_8h.xml  vkvg_8h.yaml
_includes/: head.html  navfunc.html  sidenav.html
_layouts/: documentation.html  framed.html  home.html
_plugins/: directory_tag.rb  doxygen.rb  hello.rb
_posts/: 2020-08-16-welcome-to-jekyll.markdown
_sass/: no-style-please.scss
assets/css/: syntax.css
building/: README.md  debian.md  windows.md
cmake/: FindGLFW3.cmake  FindHarfBuzz.cmake  FindVulkan.cmake  GitSubmoduleUpdate.cmake
doc/: Doxygen.in  Source.cpp  conf.py  context.rst  device.rst  draw_first_circle.md  first_sample.md  groups.rst  index.rst  linux_build_tutorial.md  sample_1.cpp  surface.rst  tutorial.md  windows_build_tutorial.md  windows_tutorial.md
doc/design/: error_handling.md
doc/doxy_theme/: DoxygenLayout.xml  custom.css  header.html  search.css
docs/building/: building.md
documentation/: README.md
documentation/building/: debian.md  windows.md
documentation/building2/: debian.md  windows.md
gunit_tests/: CMakeLists.txt  basicDraw.cpp  context.cpp  device.cpp  drawTestBase.cpp  drawTestBase.h  imageDraw.cpp  main2.cpp  matrices.cpp  patternDraw.cpp  surface.cpp
include/: vkvg-nsvg.h  vkvg-svg.h  vkvg.h
scripts/: batchTests.sh  log.txt
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  pages_0.js  search.css  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js
shaders/: gradient.comp  gradient0.comp  paint.frag  shader.comp  shader2.comp  triangle.frag  triangle.vert  vkvg_font.frag  vkvg_font.vert  vkvg_main.frag  vkvg_main.vert  vkvg_main_lcd.frag  vkvg_solid.frag  vkvg_solid.vert  vkvg_source.frag  vkvg_text.frag  wired.frag
shaders/helper/: GenShaders.bat  GenShaders.sh
src/: cross_mutex.c  cross_mutex.h  cross_os.c  cross_os.h  matrices.c  matrices.h  nanosvg.h  shaders.h  stb_image.h  stb_image_write.h  stb_truetype.h  vectors.c  vectors.h  vkvg_buff.c  vkvg_buff.h  vkvg_context.c  vkvg_context.c.autosave  vkvg_context_internal.c  vkvg_context_internal.h  vkvg_device.c  vkvg_device_internal.c  vkvg_device_internal.h  vkvg_experimental.c  vkvg_experimental.h  vkvg_fonts.c  vkvg_fonts.h  vkvg_internal.h  vkvg_matrix.c  vkvg_matrix.h  vkvg_nsvg.c  vkvg_pattern.c  vkvg_pattern.h  vkvg_surface.c  vkvg_surface_internal.c  vkvg_surface_internal.h  vkvg_sync_context_internal.c  vkvg_sync_context_internal.h
src/nsvg/: nanosvg.h  vkvg_nsvg.c
src/recording/: vkvg_record.c  vkvg_record_internal.c  vkvg_record_internal.h
src/seidel/: Makefile  README  construct.c  interface.h  misc.c  monotone.c  tri.c  triangulate.h
tests/: CMakeLists.txt  arcs.c  bezier.c  bezier_params_test.c  cairo-tests.h  circles.c  clip.c  colinear.c  compositing.c  context.c  curve.c  curve2.c  curved_rect.c  dashes.c  dashes2.c  fill.c  fill_and_stroke.c  fill_non_zero.c  fillnstroke.c  getarcstep.c  gradient.c  gradient2.c  gradient_transform.c  hlines.c  img_surf.c  inverse_colinear.c  line_caps.c  line_join.c  line_join_2.c  line_join_3.c  lines.c  multi.c  multilines.c  offscreen.c  paint_surf.c  painting.c  parser.c  path_extents.c  pattern_transforms.c  perf-test.h  (+21 more)
tests/common/: nanosvg.h  rnd.c  rnd.h  test.c  test.h  vkengine.c  vkengine.h
tests/multithreading/: multithreaded.c  multithreaded2.c  threaded_create_surf.c  threaded_text.c
tests/perfs/: random_rects.c  randoms.c
tests/tmp/: getarcstep.c
tests/vkvg-svg/: svg-viewer.c
